# nationalrail-gtfs

./: .gitignore  Cargo.toml  zip.sh
src/: main.rs
