[package]
name = "nationalrail-gtfs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lonlat_bng = "0.8.1"
anyhow = "1.0"
osmpbfreader = "0.19.1"
